--- a/diceEM/assignment.ipynb
+++ b/diceEM/assignment.ipynb
@@ -75,9 +75,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BagOfDice(die_priors=[0.25, 0.75], dice=[Die([0.3333, 0.3333, 0.3333]), Die([0.1, 0.2, 0.7])])\n"
+     ]
+    }
+   ],
    "source": [
     "from cse587Autils.DiceObjects.BagOfDice import BagOfDice, Die\n",
     "fair_die = Die([1/3]*3) # In python, this is equivalent to Die[1/3, 1/3, 1/3]\n",
@@ -97,9 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "die prior: 0.25\n",
+      "die object: Die([0.3333, 0.3333, 0.3333])\n",
+      "die prior: 0.75\n",
+      "die object: Die([0.1, 0.2, 0.7])\n"
+     ]
+    }
+   ],
    "source": [
     "bag[1] # Returns (0.75, Die([0.1, 0.2, 0.7]))\n",
     "for prior_die_pair in bag:\n",
@@ -116,9 +135,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "len() returns the number of dice in the bag: 2\n",
+      "accessing the die priors: [0.25, 0.75]\n",
+      "accessing the Die objects: [Die([0.3333, 0.3333, 0.3333]), Die([0.1, 0.2, 0.7])]\n"
+     ]
+    }
+   ],
    "source": [
     "# len() returns the number of dice in the bag\n",
     "print(f'len() returns the number of dice in the bag: {len(bag)}')\n",
@@ -143,9 +172,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([ 2,  1, 17]), array([11,  5,  4]), array([ 1,  9, 10]), array([11,  7,  2]), array([ 1,  4, 15])]\n"
+     ]
+    }
+   ],
    "source": [
     "sample_data = [bag.draw(20) for _ in range(5)]\n",
     "print(sample_data)"
@@ -172,9 +209,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bag difference: 0.4\n"
+     ]
+    }
+   ],
    "source": [
     "bag1 = BagOfDice([0.5, 0.5], \n",
     "                 [Die([0.9, 0.1, 0.0]), Die([0.1, 0.1, 0.8])])\n",
@@ -278,9 +323,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12,\n",
+       " BagOfDice(die_priors=[0.40900946601771687, 0.5909905339822831], dice=[Die([0.2964, 0.1988, 0.202, 0.3028]), Die([0.0, 0.1994, 0.1987, 0.6019])]))"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "import diceEM.assignment as assign\n",
@@ -296,14 +353,15 @@
     "init_bag = BagOfDice([0.75, 0.25], \n",
     "                     [Die([0.1, 0.3, 0.5, 0.1]), \n",
     "                      Die([0.1, 0.3, 0.4, 0.2])])\n",
-    "diceEM(experiment_result, init_bag, 10e-4, 100)"
+    "diceEM(experiment_result, init_bag, 10e-8, 100)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:\n",
+    "for a required accuracy of 10^-4, 6 iterations were needed to converge; 9 iterations were needed for accuracy of 10^-6 and 12 iterations were needed for 10^-8 accuracy. A general trend we can see is that as you tighten the accuracy criteria,the number of iterations will increase."
    ]
   },
   {
@@ -317,7 +375,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer:\n",
+    "accuracy of 10^-4 yields dice=[Die([0.2964, 0.1988, 0.202, 0.3028]), Die([0.0, 0.1994, 0.1987, 0.6018]\n",
+    "accuracy of 10^-6 yields dice=[Die([0.2964, 0.1988, 0.202, 0.3028]), Die([0.0, 0.1994, 0.1987, 0.6019]\n",
+    "accuracy of 10^-8 yields dice=[Die([0.2964, 0.1988, 0.202, 0.3028]), Die([0.0, 0.1994, 0.1987, 0.6019]\n",
+    "the final results accross different accuracy requirement are pretty much the same, suggesting that tightening the accuracy requirement doesn't have much effect on how well the algorithm identifies the correct parameter."
    ]
   },
   {
@@ -331,9 +393,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9,\n",
+       " BagOfDice(die_priors=[0.40416219790208086, 0.5958378020979191], dice=[Die([0.2973, 0.1988, 0.304, 0.2]), Die([0.1004, 0.1993, 0.1998, 0.5005])]))"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "import diceEM.assignment as assign\n",
@@ -355,7 +429,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Ansewer:"
+    "Ansewer: this experiment takes 9 iterations rather than 6 to converge. This could be caused by the second dice having 4 possible faces instead of 3, requiring more computations to reach a convergence."
    ]
   },
   {
@@ -369,9 +443,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BagOfDice(die_priors=[0.4025422304722806, 0.5974577695277193], dice=[Die([0.2986, 0.3027, 0.2015, 0.1972]), Die([0.1988, 0.1986, 0.2011, 0.4015])])\n"
+     ]
+    }
+   ],
    "source": [
     "from importlib import reload\n",
     "import diceEM.assignment as assign\n",
@@ -393,7 +475,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- How many die rolls are in this sample? "
+    "- How many die rolls are in this sample? \n",
+    "there are 6000*30 = 180000 rolls"
    ]
   },
   {
@@ -412,12 +495,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(24, BagOfDice(die_priors=[0.4083095244284838, 0.5916904755715161], dice=[Die([0.3032, 0.298, 0.1973, 0.2015]), Die([0.2002, 0.1978, 0.2028, 0.3992])]))\n",
+      "(24, BagOfDice(die_priors=[0.4124879647853679, 0.587512035214632], dice=[Die([0.3018, 0.2979, 0.1978, 0.2024]), Die([0.2003, 0.1995, 0.1979, 0.4022])]))\n",
+      "(23, BagOfDice(die_priors=[0.41658342863940023, 0.5834165713605998], dice=[Die([0.3022, 0.297, 0.2006, 0.2002]), Die([0.1996, 0.202, 0.1967, 0.4017])]))\n",
+      "(25, BagOfDice(die_priors=[0.40320921739866183, 0.5967907826013382], dice=[Die([0.2943, 0.2993, 0.2058, 0.2006]), Die([0.2014, 0.2003, 0.1988, 0.3996])]))\n",
+      "(22, BagOfDice(die_priors=[0.389395464553155, 0.6106045354468449], dice=[Die([0.3026, 0.3012, 0.1984, 0.1978]), Die([0.2033, 0.1993, 0.1985, 0.399])]))\n",
+      "(23, BagOfDice(die_priors=[0.39055907906351794, 0.6094409209364821], dice=[Die([0.298, 0.298, 0.2054, 0.1986]), Die([0.1997, 0.201, 0.2004, 0.399])]))\n",
+      "(25, BagOfDice(die_priors=[0.3900927352017273, 0.6099072647982726], dice=[Die([0.2972, 0.3043, 0.1975, 0.2011]), Die([0.2064, 0.1999, 0.1993, 0.3944])]))\n",
+      "(25, BagOfDice(die_priors=[0.40010591077987057, 0.5998940892201294], dice=[Die([0.3025, 0.2996, 0.1974, 0.2005]), Die([0.2041, 0.1993, 0.1991, 0.3975])]))\n",
+      "(24, BagOfDice(die_priors=[0.4062819164914658, 0.5937180835085342], dice=[Die([0.301, 0.3013, 0.1978, 0.1999]), Die([0.2003, 0.2004, 0.2005, 0.3987])]))\n",
+      "(28, BagOfDice(die_priors=[0.40002036751687126, 0.5999796324831287], dice=[Die([0.2981, 0.297, 0.1986, 0.2063]), Die([0.2005, 0.2022, 0.1996, 0.3978])]))\n"
+     ]
+    }
+   ],
    "source": [
     "for data_seed in range(10):\n",
-    "    data = generate_sample([4, 6], face_probs, 4000, 30, seed=data_seed)\n",
+    "    data = generate_sample([4, 6], face_probs, 5000, 30, seed=data_seed)\n",
     "    print(diceEM(data, init_bag, 10e-4, 100))"
    ]
   },
@@ -425,7 +525,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: 5000"
    ]
   },
   {
@@ -439,7 +539,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The priors were more off than the face probs."
+    "The priors were more off than the face probabilities."
    ]
   },
   {
@@ -452,9 +552,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(14, BagOfDice(die_priors=[0.4048531903519992, 0.5951468096480008], dice=[Die([0.3008, 0.2987, 0.1996, 0.2008]), Die([0.1987, 0.1984, 0.2021, 0.4008])]))\n",
+      "(14, BagOfDice(die_priors=[0.40403145789614275, 0.5959685421038573], dice=[Die([0.3006, 0.2974, 0.2029, 0.1991]), Die([0.2014, 0.1977, 0.2003, 0.4006])]))\n",
+      "(14, BagOfDice(die_priors=[0.41132836612045764, 0.5886716338795422], dice=[Die([0.3035, 0.2967, 0.2015, 0.1983]), Die([0.202, 0.1999, 0.1983, 0.3998])]))\n",
+      "(14, BagOfDice(die_priors=[0.4125738133836881, 0.587426186616312], dice=[Die([0.2997, 0.2985, 0.1976, 0.2043]), Die([0.1995, 0.2008, 0.1986, 0.401])]))\n",
+      "(13, BagOfDice(die_priors=[0.39753174454808077, 0.6024682554519193], dice=[Die([0.3015, 0.3002, 0.1989, 0.1994]), Die([0.2022, 0.1979, 0.2019, 0.398])]))\n",
+      "(14, BagOfDice(die_priors=[0.39385700062692947, 0.6061429993730705], dice=[Die([0.2987, 0.299, 0.2023, 0.1999]), Die([0.2, 0.2001, 0.1998, 0.4001])]))\n",
+      "(14, BagOfDice(die_priors=[0.38902569903173406, 0.6109743009682659], dice=[Die([0.3, 0.3022, 0.2002, 0.1976]), Die([0.2031, 0.2009, 0.1984, 0.3976])]))\n",
+      "(13, BagOfDice(die_priors=[0.40667057192089684, 0.5933294280791032], dice=[Die([0.2998, 0.3003, 0.2015, 0.1984]), Die([0.1988, 0.1992, 0.2007, 0.4013])]))\n",
+      "(14, BagOfDice(die_priors=[0.4081972987032326, 0.5918027012967673], dice=[Die([0.2993, 0.3041, 0.1983, 0.1982]), Die([0.2009, 0.2, 0.1983, 0.4008])]))\n",
+      "(13, BagOfDice(die_priors=[0.3970151936528299, 0.6029848063471701], dice=[Die([0.2993, 0.3027, 0.1988, 0.1992]), Die([0.1985, 0.2003, 0.1994, 0.4018])]))\n"
+     ]
+    }
+   ],
    "source": [
     "for data_seed in range(10):\n",
     "    data = generate_sample([4, 6], face_probs, 4000, 50, seed=data_seed)\n",
@@ -465,7 +582,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer"
+    "Answer：about 4000"
    ]
   },
   {
@@ -479,7 +596,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Answer:"
+    "Answer: tightening the convergence criterion doesn't contribute to making the results substantially more accurate"
    ]
   },
   {
